# gigileo

./: .gitignore  Cargo.toml  README.md
example/: index.html  nginx.conf
fe-app/: index.js  webpack.config.js
fe-app/app/: font.js  global-state.js  label.js  login.js  modalities.js  pdf-template.js  sidebar.js  upload-photo.js  utils.js  window.js  workspace.js
fi3-wasm-pdf-generator/: Cargo.toml  README.md  build.sh  test
fi3-wasm-pdf-generator/examples/: example.rs
fi3-wasm-pdf-generator/src/: lib.rs
font-mutator/: mutator.py
js-module/: index.js  package-lock.json  package.json  webpack.config.js
src/: font.rs  login.rs  main.rs  photo.rs  template.rs  user.rs
static/: index.html  styles.css
