[package]
name = "gigileo"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
img-parts = "0.2.1"
bytes = "0.5.3"
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "webp"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "json"]
