[package]
name = "fi3-wasm-pdf-generator"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
printpdf = {src = "https://github.com/fschutt/printpdf/commit/6021f6289b91a8a20374845d14bc75bfdc95c415"}
wasm-bindgen = "0.2"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
crate-type = ["cdylib", "rlib"]
